--- a/ssm_demo/pom.xml
+++ b/ssm_demo/pom.xml
@@ -235,6 +235,13 @@
     <artifactId>commons-lang3</artifactId>
     <version>3.4</version>
 </dependency>
+
+<!--freemarker用于专题活动模块-->
+		<dependency>
+			<groupId>org.freemarker</groupId>
+			<artifactId>freemarker</artifactId>
+			<version>2.3.23</version>
+		</dependency>
 		
     </dependencies>  
   <build>
