--- a/ssm_demo/pom.xml
+++ b/ssm_demo/pom.xml
@@ -246,5 +246,24 @@
     </dependencies>  
   <build>
     <finalName>ssm_demo</finalName>
+    
+    <plugins>
+			<plugin>
+				<groupId>org.mortbay.jetty</groupId>
+				<artifactId>jetty-maven-plugin</artifactId>
+				<version>8.1.16.v20140903</version>
+				<configuration>
+					<connectors>
+						<connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
+							<port>8888</port>
+						</connector>
+					</connectors>
+					<webApp>
+						<defaultsDescriptor>src/test/resources/webdefault.xml</defaultsDescriptor>
+						<contextPath>/</contextPath>
+					</webApp>
+				</configuration>
+			</plugin>
+		</plugins>
   </build>
 </project>
