--- a/ssm_demo/pom.xml
+++ b/ssm_demo/pom.xml
@@ -243,6 +243,35 @@
 			<version>2.3.23</version>
 		</dependency>
 		
+		<!-- https://mvnrepository.com/artifact/itext/itext -->
+<dependency>
+    <groupId>itext</groupId>
+    <artifactId>itext</artifactId>
+    <version>1.3</version>
+</dependency>
+		
+		
+		<dependency>       
+    <groupId>org.apache.pdfbox</groupId>       
+    <artifactId>fontbox</artifactId>       
+    <version>2.0.1</version>   
+</dependency>   
+<dependency>     
+    <groupId>org.apache.pdfbox</groupId>     
+    <artifactId>pdfbox</artifactId>    
+     <version>2.0.1</version>   
+</dependency> 
+		
+	<!-- https://mvnrepository.com/artifact/org.quartz-scheduler/quartz -->
+<dependency>
+    <groupId>org.quartz-scheduler</groupId>
+    <artifactId>quartz</artifactId>
+    <version>2.3.0</version>
+</dependency>
+		
+		
+		
+		
     </dependencies>  
   <build>
     <finalName>ssm_demo</finalName>
