--- a/ssm_demo/src/main/webapp/WEB-INF/web.xml
+++ b/ssm_demo/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,7 @@
     <display-name>Archetype Created Web Application</display-name>  
       
     <welcome-file-list>  
-        <welcome-file>/static/html/front.html</welcome-file>  
+        <welcome-file>index.jsp</welcome-file>  
     </welcome-file-list>  
       
 
