生产者和消费者

--- a/ssm_demo/.settings/org.eclipse.core.resources.prefs
+++ b/ssm_demo/.settings/org.eclipse.core.resources.prefs
@@ -4,4 +4,5 @@ encoding//src/main/webapp/banner/swiper.jsp=UTF-8
 encoding//src/main/webapp/index/index.jsp=UTF-8
 encoding//src/main/webapp/publish/publish_manager.jsp=UTF-8
 encoding//src/main/webapp/static/ftl/common/common.ftl=UTF-8
+encoding//src/main/webapp/user/user_add.jsp=UTF-8
 encoding//src/main/webapp/user/user_manager.jsp=UTF-8
