--- a/ssm_demo/.classpath
+++ b/ssm_demo/.classpath
@@ -25,7 +25,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v8.0.29"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
@@ -35,5 +35,6 @@
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/icepdf-pro.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/icepdf-pro-intl.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/icepdf-viewer.jar"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/jacob.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
